# MAB-framework

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Readme.md  env_docs.md  environment.md  student_guide.md
multi_agent_bandits/: cli.py
multi_agent_bandits/core/: agent.py  arm.py  environment.py  experiment_runner.py  reward_sharing.py
multi_agent_bandits/examples/: run_example.py
multi_agent_bandits/experiments/: example.py
multi_agent_bandits/strategies/: epsilon_greedy.py  random.py  ucb_baseline.py
results/example/: choices.csv  rewards.csv  summary.txt
results/example_run/: choices.csv  rewards.csv  summary.txt
tests/: test_sanity.py
